ShoppingCart/k8s/forntend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
        - name: angular-frontend
          image: noufawal0311/angular-frontend:latest
          ports:
            - containerPort: 80
