ShoppingCart/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-frontend-ingress
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/subnets: subnet-00b6050ff6c725bec,subnet-09a3d405c89682263
    alb.ingress.kubernetes.io/load-balancer-name: frontend-cart-alb
    alb.ingress.kubernetes.io/tags: app=frontend-cart,env=dev
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend-service
                port:
                  number: 80
